--- a/loginpage.html
+++ b/loginpage.html
@@ -88,9 +88,9 @@
     <h2>Dive into your account</h2>
     <form action="about.html" method="post">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username"><br><br>
+      <input type="text" id="username" name="username" value="Type: admin"><br><br>
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password"><br><br>
+      <input type="password" id="password" name="password" value="Type: password"><br><br>
       <input type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="register.html">Register</a></p>
